Review and test instructions