@@ -81,63 +81,131 @@ The following chapter describes how we have technically implemented such user's 
   oc get dc/spring-boot-supervisord -o yaml | grep -A 25 initContainer
   
   initContainers:
-  - args:
-    - -r
-    - /opt/supervisord
-    - ' /var/lib/'
-    command:
-    - /usr/bin/cp
-    image: 172.30.1.1:5000/k8s-supervisord/copy-supervisord:1.0
-    imagePullPolicy: Always
-    name: copy-supervisord
-    resources: {}
-    terminationMessagePath: /dev/termination-log
-    terminationMessagePolicy: File
-    volumeMounts:
-    - mountPath: /var/lib/supervisord
-      name: shared-data
-  restartPolicy: Always
-  schedulerName: default-scheduler
-  securityContext: {}
-  terminationGracePeriodSeconds: 30
-  volumes:
-  - emptyDir: {}
-    name: shared-data
+      - env:
+        - name: CMDS
+          value: echo:/var/lib/supervisord/conf/echo.sh;run-java:/usr/local/s2i/run;compile-java:/usr/local/s2i/assemble;build:/deployments/buildapp
+        image: quay.io/snowdrop/supervisord@sha256:0c6ad373a3aa991edcb9b5806aecd0d57467f74018c96c6299adb9a10aaa86da
+        imagePullPolicy: Always
+        name: copy-supervisord
+        resources: {}
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
+        volumeMounts:
+        - mountPath: /var/lib/supervisord
+          name: shared-data
+      restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
+      volumes:
+      - emptyDir: {}
+        name: shared-data
+  triggers:
+  - imageChangeParams:
+      automatic: true
+      containerNames:
+      - copy-supervisord
   ...
   ```
   
 ## Push the code  
   
-- Check the status of the `supervisord` to verify the programs which are available
-  ```bash
-  SB_POD=$(oc get pods -l app=spring-boot-supervisord -o name)
+- As the Development's pod has been created and is running the `supervisord's application`, we will now push the local's code (pom.xml, src)
+  to the pod
 
-  oc rsh $SB_POD /var/lib/supervisord/bin/supervisord ctl status
-  echo                             STOPPED   
-  run-java                         STOPPED   
-  compile-java                     STOPPED   
-  ```  
-
-- Push the code source (pom.xml, ./src)
   ```bash
-  SB_POD=$(oc get pods -l app=spring-boot-supervisord -o name)
-  SB_POD_NAME=${SB_POD:5:${#SB_POD}}
-  oc cp ./pom.xml $SB_POD_NAME:/tmp/src/ -c spring-boot-supervisord
-  oc cp ./src $SB_POD_NAME:/tmp/src/ -c spring-boot-supervisord
-  oc rsh $SB_POD ls -la /tmp/src/
+  sb push
+  INFO[0000] sb Push command called                       
+  INFO[0000] [Step 1] - Parse MANIFEST of the project if it exists 
+  INFO[0000] [Step 2] - Get K8s config file               
+  INFO[0000] [Step 3] - Create kube Rest config client using config's file of the developer's machine 
+  INFO[0000] [Step 4] - Wait till the dev's pod is available 
+  INFO[0000] [Step 5] - Copy files from Development projects to the pod 
+  ```
+   
   
-## Compile and start the Spring Boot Java App
+## Compile the Spring Boot Java App
   
 - Compile it within the pod  
+    
   ```bash
-  oc rsh $SB_POD /var/lib/supervisord/bin/supervisord ctl start compile-java 
-  oc logs $SB_POD -f 
+  sb compile
+  INFO[0000] sb Compile command called                    
+  INFO[0000] [Step 1] - Parse MANIFEST of the project if it exists 
+  INFO[0000] [Step 2] - Get K8s config file               
+  INFO[0000] [Step 3] - Create kube Rest config client using config's file of the developer's machine 
+  INFO[0000] [Step 4] - Wait till the dev's pod is available 
+  INFO[0000] [Step 5] - Compile ...                       
+  compile-java: started
+  time="2018-07-13T10:59:05Z" level=info msg="create process:run-java"
+  time="2018-07-13T10:59:05Z" level=info msg="create process:compile-java"
+  time="2018-07-13T10:59:05Z" level=info msg="create process:build"
+  time="2018-07-13T10:59:05Z" level=info msg="create process:echo"
+  time="2018-07-13T11:03:39Z" level=debug msg="no auth required"
+  time="2018-07-13T11:03:39Z" level=debug msg="succeed to find process:compile-java"
+  time="2018-07-13T11:03:39Z" level=info msg="try to start program" program=compile-java
+  time="2018-07-13T11:03:39Z" level=info msg="success to start program" program=compile-java
+  ==================================================================
+  Starting S2I Java Build .....
+  Maven build detected
+  Initialising default settings /tmp/artifacts/configuration/settings.xml
+  Setting MAVEN_OPTS to -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:+UseParallelOldGC -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -XX:MaxMetaspaceSize=100m -XX:+ExitOnOutOfMemoryError
+  Found pom.xml ... 
+  Running 'mvn -Dmaven.repo.local=/tmp/artifacts/m2 -s /tmp/artifacts/configuration/settings.xml -e -Popenshift -DskipTests -Dcom.redhat.xpaas.repo.redhatga -Dfabric8.skip=true package --batch-mode -Djava.net.preferIPv4Stack=true '
+  Apache Maven 3.5.0 (Red Hat 3.5.0-4.3)
+  Maven home: /opt/rh/rh-maven35/root/usr/share/maven
+  Java version: 1.8.0_171, vendor: Oracle Corporation
+  Java home: /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.171-8.b10.el7_5.x86_64/jre
+  Default locale: en_US, platform encoding: ANSI_X3.4-1968
+  OS name: "linux", version: "3.10.0-693.21.1.el7.x86_64", arch: "amd64", family: "unix"
+  time="2018-07-13T11:03:40Z" level=debug msg="wait program exit" program=compile-java
+  [INFO] Error stacktraces are turned on.
+  [INFO] Scanning for projects...
+  [INFO] Downloading: https://repo1.maven.org/maven2/io/openshift/booster-parent/23/booster-parent-23.pom
+  ...
+  [INFO] ------------------------------------------------------------------------
+  [INFO] BUILD SUCCESS
+  [INFO] ------------------------------------------------------------------------
+  [INFO] Total time: 01:07 min
+  [INFO] Finished at: 2018-07-13T11:04:49Z
+  [INFO] Final Memory: 26M/40M
+  [INFO] ------------------------------------------------------------------------
+  [WARNING] The requested profile "openshift" could not be activated because it does not exist.
+  Copying Maven artifacts from /tmp/src/target to /deployments ...
+  Running: cp *.jar /deployments
+  ... done
+  time="2018-07-13T11:04:49Z" level=info msg="program stopped with status:exit status 0" program=compile-java
+  time="2018-07-13T11:04:49Z" level=info msg="Don't start the stopped program because its autorestart flag is false" program=compile-java
   ```
   
-- Start the java application compiled
+  **Remark** Before to launch the compilation's command using supervisord, the program will wait till the development's pod is alive !
+  
+## Start the java application and curl the endpoint
+
+- Launch the Spring Boot Application
+
   ```bash
-  oc rsh $SB_POD /var/lib/supervisord/bin/supervisord ctl start run-java
-  oc logs $SB_POD -f 
+  sb run
+  ime="2018-07-13T11:06:26Z" level=debug msg="succeed to find process:run-java"
+  time="2018-07-13T11:06:26Z" level=info msg="try to start program" program=run-java
+  time="2018-07-13T11:06:26Z" level=info msg="success to start program" program=run-java
+  Starting the Java application using /opt/run-java/run-java.sh ...
+  exec java -javaagent:/opt/jolokia/jolokia.jar=config=/opt/jolokia/etc/jolokia.properties -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:+UseParallelOldGC -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -XX:MaxMetaspaceSize=100m -XX:+ExitOnOutOfMemoryError -cp . -jar /deployments/spring-boot-http-1.0.jar
+  time="2018-07-13T11:06:27Z" level=debug msg="wait program exit" program=run-java
+  I> No access restrictor found, access to any MBean is allowed
+  Jolokia: Agent started with URL https://172.17.0.7:8778/jolokia/
+    .   ____          _            __ _ _
+   /\\ / ___'_ __ _ _(_)_ __  __ _ \ \ \ \
+  ( ( )\___ | '_ | '_| | '_ \/ _` | \ \ \ \
+   \\/  ___)| |_)| | | | | || (_| |  ) ) ) )
+    '  |____| .__|_| |_|_| |_\__, | / / / /
+   =========|_|==============|___/=/_/_/_/
+   :: Spring Boot ::       (v1.5.14.RELEASE)
+  ... 
+  2018-07-13 11:06:34.293  INFO 222 --- [           main] o.s.j.e.a.AnnotationMBeanExporter        : Registering beans for JMX exposure on startup
+  2018-07-13 11:06:34.304  INFO 222 --- [           main] o.s.c.support.DefaultLifecycleProcessor  : Starting beans in phase 0
+  2018-07-13 11:06:34.427  INFO 222 --- [           main] s.b.c.e.t.TomcatEmbeddedServletContainer : Tomcat started on port(s): 8080 (http)
+  2018-07-13 11:06:34.436  INFO 222 --- [           main] io.openshift.booster.BoosterApplication  : Started BoosterApplication in 6.412 seconds (JVM running for 7.32) 
   ```
   
 - Access the endpoint of the Spring Boot application 
@@ -153,7 +221,7 @@ The following chapter describes how we have technically implemented such user's 
   oc delete all --all
   ```  
     
-## Developer sectionoc logs $SB_POD -f 
+## Developer section to build the images
 
 - Export Docker ENV var to access the docker daemon
   ```bash
